# BYTE

./: .gitignore  main.py  pyproject.toml
src/parsing/: .gitignore  ya_parser.ipynb  ya_parser_raw.ipynb  yandex_realty_manual.csv.dvc
