[project]
name = "byte"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "cianparser>=1.0.4",
    "dvc>=3.67.0",
    "fake-useragent>=2.2.0",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "pillow>=12.1.1",
    "seaborn>=0.13.2",
    "selenium>=4.41.0",
]
